starknet-k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathfinder-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pathfinder-deployment
  template:
    metadata:
      labels:
        app: pathfinder-deployment
    spec:
      containers:
        - name: pathfinder
          image: eqlabs/pathfinder:latest
          args:
            - "--ethereum.url"
            - "$(ETHEREUM_URL)"
            - "--http-rpc"
            - "0.0.0.0:9545"
          ports:
            - containerPort: 9545
          securityContext:
            fsGroup: 1000
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: host-data-volume
              mountPath: /usr/share/pathfinder/data # 容器内的挂载路径
      volumes:
        - name: host-data-volume
          hostPath:
            path: /root/pathfinder # 宿主机上的路径
            type: DirectoryOrCreate
